# kindergartenManager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUGFIX_EXPORT_ISSUE.md  CHANGELOG.md  COMPLETION_REPORT.md  CONFIG_IMPLEMENTATION_SUMMARY.md  CONFIG_QUICK_REFERENCE.md  CONFIG_UI_GUIDE.md  Caddyfile  DOCUMENTATION_INTEGRATION_REPORT.md  Dockerfile  FILE_MANIFEST.md  KG_MANAGER_README.md  LICENSE  PROJECT.md  QUICKSTART.md  README.md  REFACTOR_GUIDE.md  REFACTOR_SUMMARY.md  SESSION_SUMMARY.md  app.py  debug_template.py  docker-compose.dev.yml  docker-compose.yml  environment.yml  eslint.config.mjs  examples_usage.py  kindergartenManager.spec  minimal_fill.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  read_output.py  requirements.txt  run.py  setup.py  (+9 more)
.github/: copilot-instructions.md
alembic/: env.py
app/: __init__.py  config.py  db.py  main.py
docs/: API.md  DEVELOPER.md  MANUAL_TESTING.md  README.md  USER_MANUAL.md  daily-plan.md  week-plan.md
examples/: example_schema.json  plan.db  semester.db  teacherplan.docx  teacherplan_filled.docx  template_text.txt
kg_manager/: __init__.py  ai.py  db.py  models.py  validate.py  word.py
memory-bank/: PRD.md  api-integration.md  architecture.md  dev4.0-plan.md  implementation-plan.md  overview.md  plan.md  progress.md  tech-stack.md  testing.md
services/: README.md
templates/: .~lock.ObservationRecord.docx#  MAPPING.md  ObservationRecord.docx  OneOnOneListeningSmallSecond.docx  coursereviewactivity.docx  homemadeteaching.docx  weekplan.docx
tests/: conftest.py  (+69 more)
(+227 files in other folders)
