[project]
name = "kindergarten-manager"
version = "0.1.0"
description = "幼儿园信息管理系统 - 每日活动计划模块"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=2.0.0",
    "pymysql>=1.1.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
